apps/termix/deployment-guacd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: termix
  labels:
    app: guacd
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          ports:
            - containerPort: 4822
              name: guacd
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
