apps/termix/service-termix.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: termix
  namespace: termix
spec:
  selector:
    app: termix
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
