apps/termix/ingressroute-termix.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: termix
  namespace: termix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`termix.xrs444.net`)
      kind: Rule
      services:
        - name: termix
          port: 8080
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
